Update z-index to use maximum allowed. Fix buf on IDs not clearing correctly

--- a/WebExtension/checks/css-background-images/css-background-images.scss
+++ b/WebExtension/checks/css-background-images/css-background-images.scss
@@ -14,6 +14,6 @@
 	opacity: 0.8,
 	padding: 0.5em,
 	width: 12em,
-	z-index: 10000,
+	z-index: 2147483647,
 	), true);
 } 
