--- a/WebExtension/checks/duplicate-ids/duplicate-ids.scss
+++ b/WebExtension/checks/duplicate-ids/duplicate-ids.scss
@@ -16,6 +16,7 @@
   font-weight: 700,
   margin: 0,
   text-wrap:pretty,
+  z-index: 2147483647,
   ),
     true
   );
