--- a/WebExtension/checks/image-alt/show-alt-text.scss
+++ b/WebExtension/checks/image-alt/show-alt-text.scss
@@ -12,7 +12,7 @@
       left: 0.5em,
       line-height: 1.5,
       padding: 0.5em,
-      z-index: 10000,
+      z-index: 2147483647,
     ),
     true
   );
