--- a/WebExtension/checks/image-missing-alt/missing-alt.scss
+++ b/WebExtension/checks/image-missing-alt/missing-alt.scss
@@ -13,7 +13,7 @@
       line-height: 1.5,
       padding: 0.5em,
       width: 12em,
-      z-index: 10000,
+      z-index: 2147483647,
     ),
     true
   );
