--- a/WebExtension/checks/sr-only/sr-only.scss
+++ b/WebExtension/checks/sr-only/sr-only.scss
@@ -7,7 +7,7 @@
 
 .warning-message-9927845 {
   font-weight: 700;
-  z-index: 200000;
+  z-index: 2147483647;
   min-width: 15em;
 
   @include important-styles(
