--- a/WebExtension/checks/target-size/target-size.scss
+++ b/WebExtension/checks/target-size/target-size.scss
@@ -18,7 +18,7 @@
       padding: 0.5em,
       min-height: 8em,
       width: 12em,
-      z-index: 10000,
+      z-index: 2147483647,
     ),
     true
   );
@@ -43,7 +43,7 @@
       padding: 0.5em,
       min-height: 10em,
       width: 20em,
-      z-index: 10000,
+      z-index: 2147483647,
     ),
     true
   );
