--- a/WebExtension/extension/ui/css/popup.scss
+++ b/WebExtension/extension/ui/css/popup.scss
@@ -53,7 +53,7 @@ hgroup p {
   right: 0.2em;
   top: 0.35em;
   width: 6.45em;
-  z-index: 10000;
+  z-index: 2147483647,
 }
 
 .column-container-299867 {
